Enhance MainLayout with fixed layout structure and overflow handling. Add new header and footer classes for improved layout management. Update SCSS variables to include header color.

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -1,6 +1,7 @@
 $primary   : #0D3863;   
 $secondary : #031835;   
-$accent    : #f5f5f5;   
+$accent    : #f5f5f5;
+$header   : #E5E1D0;   
 
 $positive  : #4caf50;
 $negative  : #f44336;
